[package]
name = "rgb_led_task"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "defmt",
]}

esp-hal = { version = "0.23.1", features = [
    "esp32s3",
    "defmt",
], default-features = false }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"

esp-wifi = { version = "0.12.0", features = [
    "esp32s3",
    "ble",
    "esp-alloc",
    "defmt",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
cfg-if              = "1.0.0"
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",
    "defmt"
] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "ad75112" }


[features]
default = ["esp32s3"]
esp32s3 = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
